--- a/app/SeqMine/src/app/components/login/login.component.html
+++ b/app/SeqMine/src/app/components/login/login.component.html
@@ -1,1 +1,65 @@
-<p>login works!</p>
+<div *ngIf="!this.isLoggedIn" class="container">
+  <fieldset>
+    <form
+      class="row d-flex justify-content-center"
+      [formGroup]="loginForm"
+      (ngSubmit)="doLogin()"
+    >
+      <!-- USERNAME -->
+      <!-- ===================================================== -->
+      <div class="col-5 mt-5 text-center">
+        <label for="login-username">Username</label>
+        <div class="w-100"></div>
+        <input
+          id="login-username"
+          type="text"
+          formControlName="username"
+        />
+
+        <span
+          *ngIf="this.loginForm.get('username')?.errors?.['required'] &&
+                             this.loginForm.get('username')?.touched"
+        >
+          Username field is empty.
+        </span>
+      </div>
+
+      <div class="w-100"></div>
+
+      <!-- Password -->
+      <!-- ===================================================== -->
+      <div class="col-5 mt-3 text-center">
+        <label for="login-password">Password</label>
+        <div class="w-100"></div>
+        <input
+          type="password"
+          formControlName="password"
+          value="this.getLocalStorageValue('loginPassword')"
+        />
+        <span
+          *ngIf="this.loginForm.get('password')?.errors?.['required'] &&
+                            this.loginForm.get('password')?.touched"
+        >
+          Password cannot be empty.
+        </span>
+      </div>
+
+      <div class="w-100"></div>
+
+      <div class="col-5 mt-3 text-center">
+        <button
+          class="btn btn-m btn-info"
+          type="submit"
+          [disabled]="loginForm.invalid"
+        >
+          LOGIN
+        </button>
+      </div>
+    </form>
+  </fieldset>
+</div>
+
+<div class="text-center" *ngIf="this.validationError">
+  <p class="text-danger" style="font-size: 2rem;">{{ this.validationError }}</p>
+</div>
+
