--- a/app/SeqMine/src/app/components/header/header.component.html
+++ b/app/SeqMine/src/app/components/header/header.component.html
@@ -103,7 +103,7 @@
             >Register</a
           >
         </li>
-        <li class="nav-item">
+        <li *ngIf="!this.isLoggedIn" class="nav-item">
           <a
             class="nav-link"
             routerLink="/login"
@@ -111,11 +111,11 @@
             >Log in</a
           >
         </li>
-        <li class="nav-item">
+        <li *ngIf="this.isLoggedIn" class="nav-item">
           <a
             class="nav-link"
             href="#"
-            (click)="doLogOut()"
+            (click)="logout()"
             >Log out</a
           >
         </li>
