create user and modify user WORKS! Create a class for Role and it will be DONE!

--- a/app/SeqMine/src/app/components/header/header.component.html
+++ b/app/SeqMine/src/app/components/header/header.component.html
@@ -64,7 +64,7 @@
             <div class="dropdown-divider"></div>
             <a
               class="dropdown-item"
-              routerLink="/user-manage"
+              routerLink="/user-add"
               routerLinkActive="active"
               >Create user</a
             >
