--- a/app/SeqMine/src/app/components/user-table/user-table.component.html
+++ b/app/SeqMine/src/app/components/user-table/user-table.component.html
@@ -40,6 +40,7 @@
 
                       <button type="button"
                               class="btn btn-danger"
+                              (click)="requireConfirmation(user.id, user.username)"
                       >
                         Delete
                       </button>
