--- a/app/SeqMine/src/app/components/user-table/user-table.component.html
+++ b/app/SeqMine/src/app/components/user-table/user-table.component.html
@@ -5,6 +5,7 @@
     </div>
 
     <div class="row">
+      <h3 *ngIf="getUserDeletionStatus()">fdasfdsa</h3>
         <table class="table table-hover">
           <thead>
             <tr>
