deletion status messages DONE

--- a/app/SeqMine/src/app/components/user-table/user-table.component.css
+++ b/app/SeqMine/src/app/components/user-table/user-table.component.css
@@ -13,3 +13,11 @@ thead > tr > th {
 tr {
     border-bottom: 1px solid #9b9b9b;
 }
+
+#success-deletion-message {
+    color: #00D100;
+}
+
+#failed-deletion-message {
+    color: #D10000;
+}
