user-table and user-manage documentation DONE; But missing error handling. About members DONE

--- a/app/SeqMine/src/app/components/about-members/about-members.component.html
+++ b/app/SeqMine/src/app/components/about-members/about-members.component.html
@@ -1,1 +1,16 @@
-<p>about-members works!</p>
+<div class="container">
+  <div class="jumbotron py-5">
+    <div class="col-6">
+          <img class="profile-img" src="assets/images/1-member-profile-img.jpeg">
+        <h1 class="display-4">Dániel Májer</h1>
+        <p class="lead">Web Development & Bioinformatics Student</p>
+      </div>
+    <hr class="my-4">
+    <div class="col-10 text-justified">
+        <p>Meet Dániel Májer, a student who is pursuing a degree in Web Development with a bioinformatics profile. He has always been fascinated by the intersection of technology and biology and has always dreamt of using his skills to help the scientific community.</p>
+        <p>Dániel has started recently learning web development has honing his skills to become an expert in front-end and back-end web development.</p>
+        <p>He is determined to build a bridge between technology and biology and use his skills to develop web applications that will help researchiss and scientists in their work. He believes that technology has the power to change the world and He wants to be a part of that change.</p>
+        <p>He has discovered that the intersection of web development and bioinformatics is a rapidly growing field with a high demand for professionals. As a result, he is confident that their investment in their education will yield great rewards in the future.</p>
+    </div>
+  </div>
+</div>
