finally found out how the upload works. The examples are in app/....../file-storage-manage component and ./api/index.js

--- a/app/SeqMine/src/app/components/file-storage-manage/file-storage-manage.component.html
+++ b/app/SeqMine/src/app/components/file-storage-manage/file-storage-manage.component.html
@@ -1,1 +1,12 @@
-<p>file-storage-manage works!</p>
+<input type="file" class="file-input"
+        name="file"
+       (change)="onFileSelected($event)" #fileUpload>
+
+<div class="file-upload">
+
+   {{fileName || "No file uploaded yet."}}
+
+    <button color="primary" class="upload-btn"
+      (click)="fileUpload.click()"> fdsafdsa
+    </button>
+</div>
