--- a/app/SeqMine/src/app/components/file-storage-manage/file-storage-manage.component.html
+++ b/app/SeqMine/src/app/components/file-storage-manage/file-storage-manage.component.html
@@ -10,3 +10,47 @@
       (click)="fileUpload.click()"> fdsafdsa
     </button>
 </div>
+
+<form
+      [formGroup]="fastaUploadForm"
+      (ngSubmit)="uploadFastaFiles()"
+  >
+
+  <fieldset>
+    <legend>Upload FASTA files.</legend>
+
+    <div class="form-group">
+      <label for="formFile" class="form-label mt-4">Default file input example</label>
+      <input class="form-control" type="file" multiple (change)="onFileSelected($event)" id="formFile">
+    </div>
+
+    <button type="submit" class="btn btn-primary">Upload</button>
+  </fieldset>
+</form>
+
+  <div class="col-6">
+    <div *ngFor="let progressInfo of progressInfos" class="my-3">
+
+      <p>{{ progressInfo.fileName }}</p>
+    <div class="progress">
+      <div class="progress-bar progress-bar-striped" role="progressbar" [ngStyle]="{width: progressInfo.value + '%'}" attr.aria-valuenow="{{ progressInfo.value }}" aria-valuemin="0" aria-valuemax="100">{{ progressInfo.value }}</div>
+    </div>
+
+    </div>
+  </div>
+
+<!-- <div class="progress">
+  <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%;" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+</div>
+<div class="progress">
+  <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+</div>
+<div class="progress">
+  <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+</div>
+<div class="progress">
+  <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 75%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+</div>
+<div class="progress">
+  <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+</div> -->
