--- a/app/SeqMine/src/app/components/home/home.component.html
+++ b/app/SeqMine/src/app/components/home/home.component.html
@@ -1,1 +1,10 @@
-<p>home works!</p>
+<div class="container">
+  <div class="row d-flex justify-content-center">
+    <div class="col-5">
+      <h1>Welcome to SeqMine</h1>
+
+      ><img src="/assets/images/home-page-logo.png" />
+      <p>Store your sequence data with SeqMine!</p>
+    </div>
+  </div>
+</div>
