--- a/app/SeqMine/src/app/components/login/login.component.html
+++ b/app/SeqMine/src/app/components/login/login.component.html
@@ -61,7 +61,7 @@
   </fieldset>
 </div>
 
-<div class="text-center" *ngIf="this.validationError">
-  <p class="text-danger" style="font-size: 2rem;">{{ this.validationError }}</p>
+<div class="text-center" *ngIf="this.validationErrorMessage">
+  <p class="text-danger" style="font-size: 2rem;">{{ this.validationErrorMessage }}</p>
 </div>
 
