--- a/app/SeqMine/src/app/components/user-table/user-table.component.html
+++ b/app/SeqMine/src/app/components/user-table/user-table.component.html
@@ -32,7 +32,7 @@
               <td>{{ user.email}}</td>
               <td>{{ user.firstName}}</td>
               <td>{{ user.lastName}}</td>
-              <td>{{ user.registrationDate.toLocaleDateString()}}</td>
+              <td>{{ user.registrationDate.toISOString().split('T').join(' ').split('.')[0]}}</td>
               <td>
                   <div class="d-flex justify-content-around">
                       <button type="button"
