footer pinned to the bottom

--- a/app/SeqMine/src/app/components/footer/footer.component.html
+++ b/app/SeqMine/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="bg-dark py-3">
+<footer class="bg-dark py-3 footer fixed-bottom">
   <div class="container">
     <p class="text-center">&copy; Biology Investigation Group 2023</p>
   </div>
